# FastQL

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: integrations.yml  publish.yml  specstat-sync.yml  tests.yml
docs/: .gitignore  README.md  docs.json  index.mdx  package-lock.json  package.json  style.css  vercel.json
docs/advanced/: dataloader.mdx  directives-and-visibility.mdx  federation.mdx  incremental-delivery.mdx  observability.mdx  pydantic.mdx  relay-pagination.mdx  schema-extensions.mdx  testing-and-export.mdx  uploads-and-batching.mdx
docs/architecture/: language-pipeline.mdx  overview.mdx  type-system.mdx  validation-and-execution.mdx
docs/contribute/: contributing.mdx  development.mdx  documentation.mdx
docs/data/: schema-extensions.mdx
docs/federation/: custom-directives.mdx  entities.mdx  overview.mdx
docs/integrations/: additional-frameworks.mdx  asgi-and-api-frameworks.mdx  context.mdx  flask-and-django.mdx  http-contract.mdx  overview.mdx
docs/operations/: deployment.mdx  observability.mdx
docs/protocol/: subscriptions.mdx
docs/reference/: context.mdx  decorators.mdx  overview.mdx  scalars-and-wrappers.mdx  schema-and-execution.mdx
docs/resolve/: authentication.mdx  context-and-info.mdx  dependencies.mdx  errors-and-nullability.mdx  extensions-and-permissions.mdx  resolvers.mdx
docs/snippets/: first_schema.py  quickstart.py
docs/specifications/: capability-catalog.mdx  product-principles.mdx
docs/start/: faq.mdx  first-schema.mdx  installation.mdx  introduction.mdx  project-status.mdx  quickstart.mdx
docs/tooling/: cli.mdx  dev-server.mdx  schema-output.mdx
examples/: README.md  __init__.py  hello.py
examples/advanced/: README.md  __init__.py  demo.py  generics.py  relay.py  schema_metadata.py
examples/app/: README.md  __init__.py  context.py  data.py  demo.py  enums.py  extensions.py  inputs.py  interfaces.py  loaders.py  mutations.py  permissions.py  providers.py  pubsub.py  queries.py  scalars.py  schema.py  subscriptions.py  types.py
examples/integrations/: __init__.py  asgi.py  django.py  fastapi.py  flask.py  starlette.py
examples/projects/: __init__.py  _auth.py
fastql/: __init__.py  __main__.py  cli.py  context.py  dataloader.py  errors.py  extensions.py  introspection.py  opentelemetry.py  playground.py  pydantic.py  registry.py  relay.py  schema_builder.py  sdl.py  server.py  testing.py  tracing.py  uploads.py
fastql/decorators/: __init__.py  annotations.py  construct.py  definition.py  directive.py  enum.py  field.py  object.py  operations.py  registry.py  scalar.py  union.py
fastql/execution/: __init__.py  (+3 more)
openspec/: config.yaml  index.json  visualize.json
tests/: test_asgi_integration.py  test_cli.py  test_context_injection.py  test_dataloader.py  test_decorators.py  test_directives.py  test_documentation.py  test_end_to_end.py  test_examples_advanced.py  test_examples_showcase.py  test_execution.py  test_federation.py  test_field_visibility.py  test_framework_integrations.py  test_generics.py  test_http_integration.py  test_incremental_delivery.py  test_integration_packaging.py  test_introspection.py  test_lexer.py  test_parser.py  test_pydantic.py  test_query_batching.py  test_relay.py  test_robust_types.py  test_schema_building.py  test_schema_extensions.py  test_sdl.py  test_server.py  test_smoke.py  test_subscription_transport.py  test_subscriptions.py  test_testing_client.py  test_tracing.py  test_type_system.py  test_unified_api.py  test_uploads.py  test_validation.py
(+218 files in other folders)
