[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastql"
version = "0.0.1"
description = "A code-first, decorator-driven GraphQL framework for Python with a hand-built engine and a web-framework-agnostic core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FastQL" }]
keywords = ["graphql", "schema", "decorators", "async", "framework-agnostic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Zero runtime dependencies by design — the GraphQL engine is hand-built.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/fastql/fastql"
Documentation = "https://github.com/fastql/fastql/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["fastql"]

[tool.pytest.ini_options]
# Async-first: allow plain `async def test_...` without per-test markers.
asyncio_mode = "auto"
testpaths = ["tests"]
