[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mygenx-fastql"
version = "1.0.0"
description = "A code-first, decorator-driven GraphQL framework for Python with a hand-built engine and a web-framework-agnostic core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FastQL" }]
keywords = ["graphql", "schema", "decorators", "async", "framework-agnostic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Zero runtime dependencies by design — the GraphQL engine is hand-built.
dependencies = []

[project.optional-dependencies]
asgi = []
starlette = [
    "starlette>=0.50,<2",
]
fastapi = [
    "fastapi>=0.129,<1",
]
flask = [
    "flask>=3.1,<4",
]
django = [
    "django>=5.2,<6",
]
opentelemetry = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
]
pydantic = [
    "pydantic>=2,<3",
]
all = [
    "starlette>=0.50,<2",
    "fastapi>=0.129,<1",
    "flask>=3.1,<4",
    "django>=5.2,<6",
]
dev = [
    "build>=1.2",
    "hatchling>=1.26",
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/MyGenX/FastQL"
Documentation = "https://fastql.vachagan.dev"
Repository = "https://github.com/MyGenX/FastQL"
Issues = "https://github.com/MyGenX/FastQL/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastql"]

[tool.hatch.build.targets.sdist]
include = [
    "/fastql",
    "/CHANGELOG.md",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
# Async-first: allow plain `async def test_...` without per-test markers.
asyncio_mode = "auto"
testpaths = ["tests"]
